--- a/res/layout/activity_splash.xml
+++ b/res/layout/activity_splash.xml
@@ -2,23 +2,67 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
- 
+
     <ImageView
-        android:contentDescription="@string/description"
         android:id="@+id/imgLogo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:contentDescription="@string/description"
+        android:src="@drawable/splash" />
+
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:src="@drawable/splash" />
- 
+        android:layout_alignTop="@+id/textView1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="27dp"
+        android:text="@string/course"
+        android:textColor="@color/light_grey"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
     <TextView
-        android:layout_width="fill_parent"
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:textSize="12sp"
-        android:textColor="#454545"
-        android:gravity="center_horizontal"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="@string/uva"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/light_grey" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView4"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="21dp"
+        android:text="@string/names3"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/dark_purple" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="" />
- 
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="80dp"
+        android:text="@string/names2"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/dark_purple" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView5"
+        android:layout_centerHorizontal="true"
+        android:text="@string/names1"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/dark_purple" />
+
 </RelativeLayout>
