--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/map"
   android:name="com.google.android.gms.maps.MapFragment"
   android:layout_width="match_parent"
-  android:layout_height="match_parent" />
+  android:layout_height="match_parent" >
+  
+    <TextView 
+        android:layout_width = "match_parent"
+        android:layout_height = "wrap_content"
+        android:layout_gravity = "center_horizontal|top"
+        android:layout_marginTop= "2dip"
+        android:background="#AA000000"
+        android:padding="12dip"
+        android:text="@string/score_bar"
+        android:textColor="@color/white" />
+ 
+</FrameLayout>
