--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,11 +1,10 @@
-</FrameLayout>
-
 <?xml version="1.0" encoding="utf-8"?>
 
- <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+ <fragment xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/map"
+  android:name="com.google.android.gms.maps.MapFragment"
   android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  android:layout_height="match_parent" />
 
   <TextView
       android:layout_width="match_parent"
@@ -47,4 +46,4 @@
        android:layout_gravity="left"
       android:src="@drawable/ghost" />
 
-</FrameLayout>
+</fragment>
