--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
   android:id="@+id/map"
   android:name="com.google.android.gms.maps.MapFragment"
   android:layout_width="match_parent"
-  android:layout_height="match_parent" />
+  android:layout_height="match_parent" >
 
   <TextView
       android:layout_width="match_parent"
@@ -46,4 +46,4 @@
        android:layout_gravity="left"
       android:src="@drawable/ghost" />
 
-</fragment>
+</fragement>
