--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
- <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+ <FrameLayout
+ 
+  <fragment
+  xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/map"
   android:name="com.google.android.gms.maps.MapFragment"
   android:layout_width="match_parent"
-  android:layout_height="match_parent" >
+  android:layout_height="match_parent" />
 
   <TextView
       android:layout_width="match_parent"
@@ -46,4 +49,4 @@
        android:layout_gravity="left"
       android:src="@drawable/ghost" />
 
-</fragement>
+</FrameLayout>
