--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
- <FrameLayout
- 
+<FrameLayout> 
   <fragment
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/map"
@@ -48,5 +46,4 @@
       android:layout_height="55dp"
        android:layout_gravity="left"
       android:src="@drawable/ghost" />
-
 </FrameLayout>
