--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,49 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout> 
-  <fragment
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:id="@+id/map"
-  android:name="com.google.android.gms.maps.MapFragment"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal" >
 
-  <TextView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_gravity="center_horizontal|top"
-      android:layout_marginTop="2dip"
-      android:background="#AA000000"
-      android:padding="12dip"
-      android:text="@string/score_bar"
-      android:textColor="@color/white" />
+    <LinearLayout
+        android:id="@+id/first_ll"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
 
-  <ImageView
-      android:id="@+id/imageView1"
-      android:layout_width="25dp"
-      android:layout_height="44dp"
-      android:layout_marginLeft="100dp"
-      android:layout_gravity="left"
-      android:src="@drawable/bomb" />
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.MapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
-  <ImageView
-      android:id="@+id/imageView2"
-      android:layout_width="25dp"
-      android:layout_height="44dp"
-      android:layout_marginLeft="200dp"
-      android:layout_gravity="left"
-      android:src="@drawable/dollarsign" />
+    <LinearLayout
+        android:id="@+id/second_ll"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
 
-  <ImageView
-      android:id="@+id/imageView3"
-      android:layout_width="30dp"
-      android:layout_height="50dp"
-      android:layout_gravity="right"
-      android:src="@drawable/dogbone" />
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginTop="2dip"
+            android:background="#AA000000"
+            android:padding="12dip"
+            android:text="@string/score_bar"
+            android:textColor="@color/white" />
 
-  <ImageView
-      android:id="@+id/imageView4"
-      android:layout_width="40dp"
-      android:layout_height="55dp"
-       android:layout_gravity="left"
-      android:src="@drawable/ghost" />
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="25dp"
+            android:layout_height="44dp"
+            android:layout_gravity="left"
+            android:layout_marginLeft="100dp"
+            android:src="@drawable/bomb" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="25dp"
+            android:layout_height="44dp"
+            android:layout_gravity="left"
+            android:layout_marginLeft="200dp"
+            android:src="@drawable/dollarsign" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="30dp"
+            android:layout_height="50dp"
+            android:layout_gravity="right"
+            android:src="@drawable/dogbone" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="40dp"
+            android:layout_height="55dp"
+            android:layout_gravity="left"
+            android:src="@drawable/ghost" />
+    </LinearLayout>
+
 </LinearLayout>
