--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -36,34 +36,27 @@
             android:textColor="@color/white" />
 
         <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="25dp"
-            android:layout_height="44dp"
-            android:layout_gravity="left"
-            android:layout_marginLeft="100dp"
-            android:src="@drawable/bomb" />
-
-        <ImageView
             android:id="@+id/imageView2"
             android:layout_width="25dp"
             android:layout_height="44dp"
-            android:layout_gravity="left"
-            android:layout_marginLeft="200dp"
+            android:layout_gravity="center"
             android:src="@drawable/dollarsign" />
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="30dp"
-            android:layout_height="50dp"
-            android:layout_gravity="right"
-            android:src="@drawable/dogbone" />
 
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="40dp"
             android:layout_height="55dp"
             android:layout_gravity="left"
+            android:layout_marginLeft="100dp"
             android:src="@drawable/ghost" />
+
+        <ImageView
+            android:id="@+id/imageButton1"
+            android:layout_width="25dp"
+            android:layout_height="44dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="100dp"
+            android:src="@drawable/bomb" />
     </FrameLayout>
 
 </FrameLayout>
