--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -6,6 +6,14 @@
 
     <item
         android:id="@+id/action_settings"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_settings">
+        <menu>
+            <item
+                android:id="@+id/difficulty_easy"
+                android:title="@string/difficulty_easy"/>
+            <item
+                android:id="@+id/difficulty_hard"
+                android:title="@string/difficulty_hard"/>
+        </menu>
+    </item>
 </menu>
