--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
             android:id="@+id/imageView2"
             android:layout_width="25dp"
             android:layout_height="44dp"
-            android:layout_gravity="center"
+            android:layout_gravity="center_horizontal"
             android:src="@drawable/dollarsign" 
             android:clickable="true"
             android:onClick="buyBomb"/>
