--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -38,36 +38,43 @@
             android:id="@+id/textView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|top"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="50dip"
             android:background="#AA000000"
             android:padding="7dip"
-            android:text="bomb"
-            
-            
+            android:text=""
             android:textColor="@color/white" />
           
           <TextView
-            android:id="@+id/textView1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|top"
+            android:id="@+id/textViewBomb"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="right"
             android:layout_marginTop="50dip"
             android:padding="7dip"
-            android:text="b"
-            
-            
+            android:layout_marginRight="100dp"
+            android:text="bombsss" 
             android:textColor="@color/white" />
            
         <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="43dp"
-            android:layout_gravity="right"
-            android:layout_marginRight="1dip"
-            android:layout_marginTop="10dip"
-            android:padding="45dip"
-            android:text=""
+            android:id="@+id/textViewDollar"
+           	android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="50dip"
+            android:padding="7dip"
+            android:text="$$$"
+            android:textColor="@color/white" />
+        
+        <TextView
+            android:id="@+id/textViewGhost"
+           android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="left"
+            android:layout_marginTop="50dip"
+            android:padding="7dip"
+            android:layout_marginLeft="100dp"
+            android:text="Kills"
             android:textColor="@color/white" />
 
         <ImageView
